--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!doctype html>   <!-- Fill In Your Website Language -->   <html class="no-js" lang="">       <head>    <meta charset="utf-8">    <title><!-- Fill In Your Website Title Here --></title>    <meta name="description" content="">    <meta name="viewport" content="width=device-width, initial-scale=1">       <!-- <meta property="og:title" content="">    <meta property="og:type" content="">    <meta property="og:url" content="">    <meta property="og:image" content="">    -->   <!-- <link rel="manifest" href="site.webmanifest">    <link rel="apple-touch-icon" href="icon.png"> -->    <!-- Place favicon.ico in the root directory -->        <link rel="stylesheet" href="/styles.css">        <meta name="theme-color" content="#FFFFFF">   </head>       <body>        <!-- Add your site or application content here -->    <p>Hello world! This is HTML5 Boilerplate.</p>   </body>       </html>
+<!doctype html>
+<!-- Fill In Your Website Language -->
+<html class="no-js" lang="EN">
+
+<head>
+  <meta charset="utf-8">
+  <title>Nicole's Resume</title>
+  <meta name="description" content="Nicole's resume site">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!--   <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+ -->
+<!--   <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png"> -->
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="/styles.css">
+
+  <meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+
+  <h1> Nicole Crom</h1>
+  <h2> The Resume of Nicole Crom <h2/>
+  <p> Nicole works at PS<p/>  
+  
+  <ul>
+    <li> Analytics </li>
+    </ol>
+    
+    
+</body>
+
+</html>
