--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Fill In Your Website Language -->
+
 <html class="no-js" lang="en">
 
 <head>
@@ -8,14 +8,6 @@
   <meta name="description" content="Nicole's resume site">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--   <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
- -->
-<!--   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png"> -->
-  <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="/styles.css">
 
@@ -24,12 +16,13 @@
 
 <body>
 
-  <h1> Nicole Crom</h1>
+  <h1 id="title"> Nicole Crom</h1>
   <h2> The Resume of Nicole Crom <h2/>
   <p> Nicole works at PS<p/>  
   
   <ul>
-    <li> Analytics </li>
+    <li class="blue"> Analytics </li>
+    <li class="blue"> Biz Ops </li>
     </ol>
     
     
