--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <p> Nicole works at PS<p/>  
   
   <ul>
-    <li class="blue"> Analytics </li>
-    <li class="blue"> Biz Ops </li>
+    <li class=".blue"> Analytics </li>
+    <li class=".blue"> Biz Ops </li>
     </ol>
     
     
