--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <h1 id="title"> Nicole Crom</h1>
-  <h2> The Resume of Nicole Crom <h2/>
+  <h2> The Resume of Nicole Crom </h2>
   <p> Nicole works at PS<p/>  
   
   <ul>
